<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Search</string>
    <string name="media_library">Media Library</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="share_app">Share App</string>
    <string name="text_to_support">Ask Support</string>
    <string name="user_agreement">User\'s Agreement</string>
    <string name="back_button">Back button</string>
    <string name="press_search_btn">Search button pressed</string>
    <string name="press_media_btn">Media button pressed</string>
    <string name="press_settings_btn">Settings button pressed</string>
    <string name="practicum_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_body_text">Thanks for the developers for a cool application!</string>
    <string name="email_subject">The message for the developers of Playlist Maker app</string>
    <string name="supp_email_address" translatable="false">logomann@gmail.com</string>
    <string name="practicum_offer_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear">Clear</string>
    <string name="song_description">Song Description</string>
    <string name="search_placeholder_text">Nothing found</string>
    <string name="search_placeholder_text_no_internet">Communication problems \n \n Download failed. Check your internet connection</string>
    <string name="refresh_button">Refresh</string>
    <string name="you_were_looking_for">You were looking for</string>
    <string name="clear_history">Clear history</string>
    <string name="track_duration">Duration</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="track_playing_placeholder" translatable="false">0:30</string>
    <string name="start_time_00" translatable="false">00:00</string>
    <string name="favorite_tracks">Favorite tracks</string>
    <string name="playlists">Playlists</string>
    <string name="library_is_empty">Your Media Library is empty</string>
    <string name="no_playlists">You haven\'t \ncreated any playlists</string>
    <string name="new_playlist">New playlist</string>
    <string name="new_playlist_name">Name*</string>
    <string name="new_playlist_description">Description</string>
    <string name="create">Create</string>
    <string name="confirm_creation_playlist">Complete playlist creation?</string>
    <string name="data_lost_message">All unsaved data will be lost</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="playlist">Playlist</string>
    <string name="created">created</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="track_added">Added to playlist %s</string>
    <string name="track_already_in_playlist">The track has already been added to the playlist %s</string>
    <string name="ok">OK</string>
    <string name="delete_track">Delete track</string>
    <string name="delete_track_confirm">Are you sure you want to delete the track from the playlist?</string>
    <string name="delete">Delete</string>
    <string name="no_tracks_in_playlist">This playlist does not have a list of tracks to share</string>
    <string name="share">Share</string>
    <string name="edit_info">Edit information</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="want_to_delete_playlist">Want to delete playlist</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="no_tracks">No tracks have been added to the playlist</string>

    <plurals name="track_quantity">
        <item quantity="zero">tracks</item>
        <item quantity="one">track</item>
        <item quantity="few">tracks</item>
        <item quantity="many">tracks</item>
        <item quantity="other">tracks</item>
    </plurals>
    <plurals name="time_of_tracks_quantity">
        <item quantity="zero">minutes</item>
        <item quantity="one">minute</item>
        <item quantity="few">minutes</item>
        <item quantity="many">minutes</item>
        <item quantity="other">minutes</item>
    </plurals>

</resources>