<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/settings_background"
    tools:context=".ui.medialibrary.fragment.NewPlaylistFragment">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/new_playlist_arrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/settings_background"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_back"
            app:tint="@color/settings_text_color" />

        <TextView
            android:id="@+id/new_playlist_top_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingHorizontal="@dimen/title_padding"
            android:paddingTop="10dp"
            android:paddingBottom="@dimen/title_padding"
            android:text="@string/new_playlist"
            android:textColor="@color/settings_text_color"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_button" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/new_playlist_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/new_playlist_background"
        android:importantForAccessibility="no"
        android:src="@drawable/new_playlist_placeholder"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_playlist_name"
        android:layout_height="56dp"
        android:layout_width="0dp"
        android:layout_marginTop="33dp"
        android:hint="@string/new_playlist_name"
        android:theme="@style/NewPlaylistEtStyle"
        style="@style/NewPlaylistEtStyle"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_cover" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/NewPlaylistInputBoxStyle"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_playlist_description"
        android:layout_height="56dp"
        android:layout_width="0dp"
        android:layout_marginTop="17dp"
        android:hint="@string/new_playlist_description"
        android:theme="@style/NewPlaylistEtStyle"
        style="@style/NewPlaylistEtStyle"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_name" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/NewPlaylistInputBoxStyle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_playlist_create_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/new_playlist_create_btn_selector"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>