<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/title_padding"
            android:src="@drawable/arrow_back"
            app:tint="@color/icon_button_black"
            android:layout_gravity="center"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="@dimen/title_padding"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/title_padding"
            android:paddingBottom="@dimen/title_padding"
            android:text="@string/settings"
            android:textColor="@color/icon_button_black"
            android:textSize="@dimen/text_size_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_reg"
            android:paddingStart="@dimen/button_padding"
            android:paddingTop="@dimen/settings_padding_top_bot"
            android:paddingEnd="@dimen/settings_padding_end"
            android:paddingBottom="@dimen/settings_padding_top_bot"
            android:text="@string/dark_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_text_size" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/setting_switch_margin_top"
            android:layout_marginEnd="@dimen/settings_padding_end"
            android:layout_marginBottom="@dimen/setting_switch_padding_bot"
            android:paddingStart="9dp"
            android:paddingTop="@dimen/setting_switch_padding_bot"
            android:paddingEnd="@dimen/setting_margin_end"
            android:paddingBottom="@dimen/setting_switch_padding_bot"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_reg"
            android:paddingStart="@dimen/button_padding"
            android:paddingTop="@dimen/settings_padding_top_bot"
            android:paddingEnd="@dimen/settings_padding_end"
            android:paddingBottom="@dimen/settings_padding_top_bot"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_text_size" />

        <ImageButton
            android:layout_width="@dimen/setting_image_size"
            android:layout_height="@dimen/setting_image_size"
            android:layout_marginStart="@dimen/setting_image_margin_start"
            android:layout_marginTop="@dimen/setting_margin_top"
            android:layout_marginEnd="@dimen/setting_margin_end"
            android:layout_marginBottom="@dimen/setting_margin_bot"
            android:background="@color/white"
            android:src="@drawable/share"
            android:layout_gravity="center"
            android:contentDescription="@string/share_app" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_reg"
            android:paddingStart="@dimen/button_padding"
            android:paddingTop="@dimen/settings_padding_top_bot"
            android:paddingEnd="@dimen/settings_padding_end"
            android:paddingBottom="@dimen/settings_padding_top_bot"
            android:text="@string/text_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_text_size" />

        <ImageButton
            android:layout_width="@dimen/setting_image_size"
            android:layout_height="@dimen/setting_image_size"
            android:src="@drawable/support"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginStart="@dimen/setting_image_margin_start"
            android:layout_marginEnd="@dimen/setting_margin_end"
            android:layout_marginTop="@dimen/setting_margin_top"
            android:layout_marginBottom="@dimen/setting_margin_bot"
            android:paddingEnd="@dimen/setting_support_padding_start"
            android:paddingStart="@dimen/setting_support_padding_start"
            android:paddingBottom="2.9dp"
            android:paddingTop="3.1dp"
            android:contentDescription="@string/text_to_support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/settings_padding_top_bot"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/settings_padding_end"
            android:paddingBottom="@dimen/settings_padding_top_bot"
            android:textSize="@dimen/setting_text_size"
            android:fontFamily="@font/ys_display_reg"
            android:textColor="@color/black"
            android:text="@string/user_agreement" />

        <ImageButton
            android:layout_width="@dimen/setting_image_size"
            android:layout_height="@dimen/setting_image_size"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginStart="@dimen/setting_image_margin_start"
            android:layout_marginEnd="@dimen/setting_margin_end"
            android:layout_marginTop="@dimen/setting_margin_top"
            android:layout_marginBottom="@dimen/setting_margin_bot"
            android:contentDescription="@string/user_agreement" />
    </LinearLayout>

</LinearLayout>