<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/settings_background"
        tools:context=".ui.player.activity.AudioPlayerActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_tags="country_tv_tag,country_name_tag" />

        <ImageButton
            android:id="@+id/audio_player_arrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:background="@color/settings_background"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/settings_text_color" />

        <ImageView
            android:id="@+id/track_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@id/song_name"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/audio_player_arrow"
            tools:background="@drawable/placeholder" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/settings_text_color"
            android:textFontWeight="400"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_cover"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/settings_text_color"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/song_name"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/add_to_list_btn"
            style="@style/AudioPlayerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@drawable/player_btn"
            android:importantForAccessibility="no"
            android:src="@drawable/add_to_list_button"
            app:layout_constraintEnd_toStartOf="@id/track_play_btn"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <ImageButton
            android:id="@+id/track_play_btn"
            style="@style/AudioPlayerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/player_btn"
            android:importantForAccessibility="no"
            android:src="@drawable/track_play_btn"
            app:layout_constraintEnd_toStartOf="@id/like_btn"
            app:layout_constraintStart_toEndOf="@id/add_to_list_btn"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <ImageButton
            android:id="@+id/like_btn"
            style="@style/LikeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/track_play_btn"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <TextView
            android:id="@+id/playing_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/start_time_00"
            android:textColor="@color/settings_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_play_btn" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/albumGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="album_tv,album_name" />

        <TextView
            android:id="@+id/track_duration_name"
            style="@style/AudioPlayerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/track_duration"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/playing_time" />

        <TextView
            android:id="@+id/track_duration"
            style="@style/AudioPlayerDataStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@id/playing_time"
            tools:text="5:35" />

        <TextView
            android:id="@+id/album_tv"
            style="@style/AudioPlayerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/album"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/track_duration_name" />

        <TextView
            android:id="@+id/album_name"
            style="@style/AudioPlayerDataStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/album_tv"
            app:layout_constraintTop_toBottomOf="@id/track_duration"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/year_tv"
            style="@style/AudioPlayerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/album_tv" />

        <TextView
            android:id="@+id/track_year"
            style="@style/AudioPlayerDataStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@id/album_name"
            tools:text="1965" />

        <TextView
            android:id="@+id/genre_tv"
            style="@style/AudioPlayerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/year_tv" />

        <TextView
            android:id="@+id/track_genre"
            style="@style/AudioPlayerDataStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@id/track_year"
            tools:text="Rock" />

        <TextView
            android:id="@+id/country_tv"
            style="@style/AudioPlayerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTag="country_tv_tag"
            app:layout_constraintTop_toBottomOf="@id/genre_tv" />

        <TextView
            android:id="@+id/country_name"
            style="@style/AudioPlayerDataStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/country_tv"
            app:layout_constraintTag="country_name_tag"
            app:layout_constraintTop_toBottomOf="@id/track_genre"
            tools:text="Великобритания" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="260dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_top_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_to_playlist"
            android:textColor="@color/bottom_nav_color"
            android:textFontWeight="500"
            android:textSize="19sp" />

        <Button
            android:id="@+id/add_playlist_btn"
            style="@style/NewPlaylistButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>